# routes/api/v1/index.js
@@ -17,6 +17,7 @@ router.use('/users', usersRouter);
 router.get('/search', searchController.index);
 
 router.get('/articles/:id', articleController.getArticle);
+router.get('/articles/:id/:version(v\\d+)', articleController.getArticle);
 router.post('/articles', multer.array('fulltextfile', 10));
 router.post('/articles', articleController.postArticle);
 
